--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "noImplicitAny": false,
-    "lib": [
+    "allowImportingTsExtensions": false,
+    "lib": [ 
       "esnext",
       "dom"
     ],
