--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "eventemitter3": "^5.0.1",
     "gsap": "^3.9.1",
     "konva": "^9.3.16",
+    "less-loader": "^12.2.0",
     "lodash": "^4.17.21",
     "pinia": "^2.0.11",
     "vue": "^3.2.25",
     "vue-konva": "^3.2.0",
     "vue-router": "^4.0.13",
+    "workerpool": "^9.2.0",
     "xe-utils": "^3.5.32"
   },
   "devDependencies": {
@@ -51,7 +53,7 @@
     "@vitejs/plugin-vue": "^2.2.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
-    "autoprefixer": "^10.4.2",
+    "autoprefixer": "^10.4.20",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.10.0",
@@ -59,10 +61,11 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.5.0",
     "husky": "^7.0.0",
+    "less": "^4.2.1",
     "lint-staged": "^12.3.4",
     "mockjs": "^1.1.0",
     "plop": "^3.0.5",
-    "postcss": "^8.4.7",
+    "postcss": "^8.4.32",
     "prettier": "^2.5.1",
     "rollup": "^2.78.1",
     "tailwindcss": "^3.0.23",
